# rusty-todo

./: .env  Cargo.toml  README.md  docker-compose.yml  dockerfile
migrations/2023-08-03-165039_tasks/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  service.rs
